Photo Directory, Admin: Prevent long text in 'Photo Info' metabox from overflowing container.
git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14046 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/plugins/photo-directory/assets/css/admin.css
+++ b/wordpress.org/public_html/wp-content/plugins/photo-directory/assets/css/admin.css
@@ -127,6 +127,7 @@ body.post-type-photo #wp-content-editor-container {
 }
 #photos_info dd {
 	margin-left: 1.5rem;
+	overflow-wrap: break-word;
 }
 
 .wp-heading-inline #photo-dir-skip-photo {
